2015-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amadmin.8.xml: Document tape --days.
	* server-src/amadmin.c: Fix --days intape command.

2015-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c, common-src/krb5-security.c,
	* common-src/local-security.c, common-src/rsh-security.c,
	* common-src/ssh-security.c: Fix bug found by coverity.

2015-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Fix crash in tape command.

2015-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.swg: Fix for swig-3.0.5

2015-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/common/post_inst_functions.sh: Use 'command -v' instead of
	  which.

2015-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/common/post_inst_functions.sh: fix for gpg2 and gpg-agent

2015-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/common/common_functions.sh: Use systemctl to restart
	  xinetd.

2015-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix previous patch.

2015-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix race.

2015-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amdump.pm: Remove amdump file older than 30 days if
	  there is no corresponding log file.
	* server-src/amtrmlog.c: Remove amdump file when removing log file.

2015-02-10  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Fix for Solaris find.

2015-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c (ssh_connect): Use the name from the
	  disklist, no need to find the canonical name.

2015-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-util.c: Fix memory allocation issue.

2015-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Support include in backup mode.

2015-01-30  Jean-Louis Martineau <martineau@zmanda.com>