@@ -1,3 +1,6 @@
+2015-02-26  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/conffile.c (config_print_errors_as_message): Fix message.
+
 2015-02-18  Jean-Louis Martineau <martineau@zmanda.com>
 	* man/xml-source/amadmin.8.xml: Document tape --days.
 	* server-src/amadmin.c: Fix --days intape command.
